--- a/liaison.cabal
+++ b/liaison.cabal
@@ -27,7 +27,9 @@ flag dev
 library
   hs-source-dirs:     src
   build-depends:      base             >= 4.8 && < 5.0
+                    , containers       >= 0.5 && < 0.7
                     , megaparsec       >= 7.0.3 && < 8.0
+                    , scientific       >= 0.3.1 && < 0.4
                     , text             >= 0.2 && < 1.3
   exposed-modules:    Liaison
                     , Liaison.Builder
