--- a/liaison.cabal
+++ b/liaison.cabal
@@ -29,14 +29,15 @@ library
   build-depends:      base             >= 4.8 && < 5.0
                     , containers       >= 0.5 && < 0.7
                     , megaparsec       >= 7.0.3 && < 8.0
+                    , reflection       >= 2.0 && < 3.0
                     , scientific       >= 0.3.1 && < 0.4
                     , text             >= 0.2 && < 1.3
   exposed-modules:    Liaison
                     , Liaison.Builder
                     , Liaison.Evaluator
+                    , Liaison.Expression
                     , Liaison.Parser
                     , Liaison.Printer
-                    , Liaison.Types
                     , Liaison.Validation
   if flag(dev)
     ghc-options:      -Wall -Werror -Wcompat
