--- a/liaison.cabal
+++ b/liaison.cabal
@@ -9,11 +9,13 @@ maintainer:           Mark Karpov <markkarpov92@gmail.com>
 homepage:             https://github.com/mrkkrp/liaison
 bug-reports:          https://github.com/mrkkrp/liaison/issues
 category:             Nix, Data
-synopsis:             Nix as configuration language
+synopsis:             Nix as a configuration language
 build-type:           Simple
-description:          Nix as configuration language.
+description:          Nix as a configuration language.
 extra-doc-files:      CHANGELOG.md
+                    , LANG.md
                     , README.md
+                    , ROADMAP.md
 
 source-repository head
   type:               git
@@ -29,8 +31,8 @@ library
   build-depends:      base             >= 4.8 && < 5.0
                     , containers       >= 0.5 && < 0.7
                     , megaparsec       >= 7.0.3 && < 8.0
-                    , reflection       >= 2.0 && < 3.0
                     , scientific       >= 0.3.1 && < 0.4
+                    , semigroupoids    >= 5.0 && < 6.0
                     , text             >= 0.2 && < 1.3
   exposed-modules:    Liaison
                     , Liaison.Builder
